[gd_scene load_steps=9 format=2]

[ext_resource path="res://CameraBody.gd" type="Script" id=1]
[ext_resource path="res://BAVCS.gd" type="Script" id=2]
[ext_resource path="res://UIEditor.gd" type="Script" id=3]
[ext_resource path="res://sprite.jpg" type="Texture" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 300, 200, 0 )

[sub_resource type="BoxShape" id=6]

[node name="Spatial" type="Spatial"]

[node name="CameraBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 4, 8 )
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="CameraBody"]
far = 200.0

[node name="Floor" type="StaticBody" parent="."]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, 0, -1, 0 )
collision_layer = 2

[node name="CSGMesh" type="CSGMesh" parent="Floor"]
mesh = SubResource( 4 )
material = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
shape = SubResource( 6 )

[node name="Wall 1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 100, 0, 0, 0, 100, 100, 100, 0 )

[node name="CSGMesh" type="CSGMesh" parent="Wall 1"]
mesh = SubResource( 4 )
material = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Wall 1"]
shape = SubResource( 6 )

[node name="Wall 2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 100, 0, 0, 0, 100, -100, 100, 0 )

[node name="CSGMesh" type="CSGMesh" parent="Wall 2"]
mesh = SubResource( 4 )
material = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Wall 2"]
shape = SubResource( 6 )

[node name="Wall 3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 100, 0, 100, 0, -1, 0, -4.37114e-06, 0, 100, 100 )
collision_layer = 4

[node name="CSGMesh" type="CSGMesh" parent="Wall 3"]
mesh = SubResource( 4 )
material = SubResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="Wall 3"]
shape = SubResource( 6 )

[node name="BAVC" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Body And Variable Control: Stores every Kinematic Body (children), including its variables in a parent script."
}

[node name="UI" type="Control" parent="BAVC"]
anchor_right = 0.486
margin_top = -100.0
margin_right = 40.0
margin_bottom = -26.0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="BAVC/UI"]
margin_left = 1550.0
margin_top = 120.0
margin_right = 1900.0
margin_bottom = 500.0

[node name="Object" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1555.0
margin_top = 199.0
margin_right = 1784.0
margin_bottom = 229.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Object name:"

[node name="ResForce" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1553.0
margin_top = 248.0
margin_right = 1782.0
margin_bottom = 278.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Resultant force:"

[node name="Acceleration" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1553.0
margin_top = 298.0
margin_right = 1782.0
margin_bottom = 328.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Acceleration:"

[node name="Velocity" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1552.0
margin_top = 349.0
margin_right = 1781.0
margin_bottom = 379.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity:"

[node name="Mass" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1554.0
margin_top = 396.0
margin_right = 1783.0
margin_bottom = 426.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Mass:"

[node name="Elastic" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1553.0
margin_top = 449.0
margin_right = 1782.0
margin_bottom = 479.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Is elastic?:"

[node name="Title" type="RichTextLabel" parent="BAVC/UI"]
margin_left = 1607.0
margin_top = 142.0
margin_right = 1732.0
margin_bottom = 162.0
rect_scale = Vector2( 2, 2 )
text = "Object inspector"

[node name="Control" type="Control" parent="BAVC"]
margin_left = 231.0
margin_top = 33.0
margin_right = 271.0
margin_bottom = 73.0

[node name="RichTextLabel" type="RichTextLabel" parent="BAVC/Control"]
margin_left = 155.0
margin_right = 195.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="BAVC/Control"]
margin_left = 38.0
margin_top = 29.0
margin_right = 219.0
margin_bottom = 89.0
text = "Start timer and object"

[node name="Button2" type="Button" parent="BAVC/Control"]
margin_left = 39.0
margin_top = 102.0
margin_right = 223.0
margin_bottom = 156.0
text = "Create kinematic object"

[node name="Editor" type="Control" parent="BAVC"]
anchor_bottom = 30.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="BAVC/Editor"]
margin_left = 1550.0
margin_top = 455.0
margin_right = 1900.0
margin_bottom = 1080.0

[node name="Title" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1618.0
margin_top = 472.0
margin_right = 1754.0
margin_bottom = 510.0
rect_scale = Vector2( 2, 2 )
text = "Object editor
"

[node name="VxValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1562.0
margin_top = 554.0
margin_right = 1886.0
margin_bottom = 588.0
min_value = -100.0

[node name="Vx" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1565.0
margin_top = 521.0
margin_right = 1794.0
margin_bottom = 540.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity.x:"

[node name="VyValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1561.0
margin_top = 641.0
margin_right = 1885.0
margin_bottom = 675.0
min_value = -100.0

[node name="Vy" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1564.0
margin_top = 608.0
margin_right = 1793.0
margin_bottom = 627.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity.y:"

[node name="VzValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1557.0
margin_top = 736.0
margin_right = 1881.0
margin_bottom = 770.0
min_value = -100.0

[node name="Vz" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1560.0
margin_top = 703.0
margin_right = 1789.0
margin_bottom = 722.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Velocity.z:"

[node name="AxValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1558.0
margin_top = 810.0
margin_right = 1882.0
margin_bottom = 844.0
min_value = -100.0

[node name="Ax" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1561.0
margin_top = 777.0
margin_right = 1790.0
margin_bottom = 796.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Acceleration.x:"

[node name="AyValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1557.0
margin_top = 897.0
margin_right = 1881.0
margin_bottom = 931.0
min_value = -100.0

[node name="Ay" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1560.0
margin_top = 864.0
margin_right = 1789.0
margin_bottom = 883.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Acceleration.y:"

[node name="AzValue" type="HSlider" parent="BAVC/Editor"]
margin_left = 1553.0
margin_top = 992.0
margin_right = 1877.0
margin_bottom = 1026.0
min_value = -100.0

[node name="Az" type="RichTextLabel" parent="BAVC/Editor"]
margin_left = 1556.0
margin_top = 959.0
margin_right = 1785.0
margin_bottom = 978.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Acceleration.z:"

[node name="NotGravity" type="Node" parent="."]

[connection signal="pressed" from="BAVC/Control/Button" to="BAVC" method="_on_Button_pressed"]
